Fix hardware button high contrast, hide tooltip in mobile

--- a/theme/highcontrast.less
+++ b/theme/highcontrast.less
@@ -458,11 +458,15 @@
     }
 
     /* Dropdown */
-    .ui.menu .ui.dropdown .menu {
+    .ui.menu .ui.dropdown .menu,
+    #editortools .ui.dropdown .menu {
         border: 1px solid @HCtextColor !important;
     }
 
-    .ui.menu .ui.dropdown .menu, .ui.menu .ui.dropdown .menu > .item {
+    .ui.menu .ui.dropdown .menu,
+    .ui.menu .ui.dropdown .menu > .item,
+    #editortools .ui.dropdown .menu,
+    #editortools .ui.dropdown .menu > .item {
         background: @HCbackground !important;
         color: @HCtextColor !important;
 
@@ -477,7 +481,8 @@
         }
     }
 
-    .ui.menu .ui.dropdown .menu > .divider {
+    .ui.menu .ui.dropdown .menu > .divider,
+    #editortools .ui.dropdown .menu > .divider {
         background: @HCbackground !important;
         border-top: 1px solid @HCtextColor !important;
     }
@@ -544,6 +549,20 @@
             color: @HCaccessibleMenuColor !important;
             background: @HCaccessibleMenuBackground !important;
         }
+    }
+
+    [data-tooltip]:after,
+    [data-tooltip]:before {
+        color: @HCtextColor!important;
+        background-color: @HCbackground!important;
+    }
+
+    [data-tooltip]:after {
+        border: 1px solid @HCtextColor!important;
+    }
+
+    [data-tooltip]:before {
+        box-shadow: 1px 1px 0 0 @HCtextColor!important;
     }
 }
 
